crates/crochet_parser/src/snapshots/crochet_parser__tests__declarations-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let foo = () => {\n                let mut msg: string = \"hello, world\";\n                msg\n            };\n        \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..119,
                pattern: Pattern {
                    span: 17..20,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 17..20,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 23..118,
                        kind: Lambda(
                            Lambda {
                                params: [],
                                body: Expr {
                                    span: 47..84,
                                    kind: Let(
                                        Let {
                                            pattern: Some(
                                                Pattern {
                                                    span: 51..58,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "msg",
                                                            mutable: true,
                                                            span: 51..58,
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            ),
                                            type_ann: Some(
                                                TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            span: 60..66,
                                                            keyword: String,
                                                        },
                                                    ),
                                                    span: 60..66,
                                                    inferred_type: None,
                                                },
                                            ),
                                            init: Expr {
                                                span: 69..83,
                                                kind: Lit(
                                                    Str(
                                                        Str {
                                                            span: 69..83,
                                                            value: "hello, world",
                                                        },
                                                    ),
                                                ),
                                                inferred_type: None,
                                            },
                                            body: Expr {
                                                span: 101..104,
                                                kind: Ident(
                                                    Ident {
                                                        span: 101..104,
                                                        name: "msg",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
