crates/crochet_parser/src/snapshots/crochet_parser__tests__decls-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"declare let x: number;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 8..22,
                pattern: Pattern {
                    span: 12..13,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            mutable: false,
                            span: 12..13,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Keyword(
                            KeywordType {
                                span: 15..21,
                                keyword: Number,
                            },
                        ),
                        span: 15..21,
                        inferred_type: None,
                    },
                ),
                init: None,
                declare: true,
            },
        ],
    },
)
