crates/crochet_parser/src/snapshots/crochet_parser__tests__decls-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"declare let foo: Foo<string>;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 8..29,
                pattern: Pattern {
                    span: 12..15,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 12..15,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: TypeRef(
                            TypeRef {
                                span: 17..28,
                                name: "Foo",
                                type_args: Some(
                                    [
                                        TypeAnn {
                                            kind: Keyword(
                                                KeywordType {
                                                    span: 21..27,
                                                    keyword: String,
                                                },
                                            ),
                                            span: 21..27,
                                            inferred_type: None,
                                        },
                                    ],
                                ),
                            },
                        ),
                        span: 17..28,
                        inferred_type: None,
                    },
                ),
                init: None,
                declare: true,
            },
        ],
    },
)
