crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-14.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let {x, mut y = 10} = point;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..28,
                pattern: Pattern {
                    span: 4..19,
                    kind: Object(
                        ObjectPat {
                            props: [
                                Shorthand(
                                    ShorthandPatProp {
                                        ident: BindingIdent {
                                            name: "x",
                                            mutable: false,
                                            span: 5..6,
                                        },
                                        init: None,
                                        span: 5..6,
                                    },
                                ),
                                Shorthand(
                                    ShorthandPatProp {
                                        ident: BindingIdent {
                                            name: "y",
                                            mutable: true,
                                            span: 12..13,
                                        },
                                        init: Some(
                                            Expr {
                                                span: 16..18,
                                                kind: Lit(
                                                    Num(
                                                        Num {
                                                            span: 16..18,
                                                            value: "10",
                                                        },
                                                    ),
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        span: 8..13,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 22..27,
                        kind: Ident(
                            Ident {
                                span: 22..27,
                                name: "point",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
