crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let [a, b, ...rest] = letters;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..30,
                pattern: Pattern {
                    span: 4..19,
                    kind: Array(
                        ArrayPat {
                            elems: [
                                Some(
                                    ArrayPatElem {
                                        pattern: Pattern {
                                            span: 5..6,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "a",
                                                    mutable: false,
                                                    span: 5..6,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                                Some(
                                    ArrayPatElem {
                                        pattern: Pattern {
                                            span: 8..9,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "b",
                                                    mutable: false,
                                                    span: 8..9,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                                Some(
                                    ArrayPatElem {
                                        pattern: Pattern {
                                            span: 11..18,
                                            kind: Rest(
                                                RestPat {
                                                    arg: Pattern {
                                                        span: 14..18,
                                                        kind: Ident(
                                                            BindingIdent {
                                                                name: "rest",
                                                                mutable: false,
                                                                span: 14..18,
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 22..29,
                        kind: Ident(
                            Ident {
                                span: 22..29,
                                name: "letters",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
