crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let [foo, ...[bar, ...rest]] = baz;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..35,
                pattern: Pattern {
                    span: 4..28,
                    kind: Array(
                        ArrayPat {
                            elems: [
                                Some(
                                    ArrayPatElem {
                                        pattern: Pattern {
                                            span: 5..8,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "foo",
                                                    mutable: false,
                                                    span: 5..8,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                                Some(
                                    ArrayPatElem {
                                        pattern: Pattern {
                                            span: 10..27,
                                            kind: Rest(
                                                RestPat {
                                                    arg: Pattern {
                                                        span: 13..27,
                                                        kind: Array(
                                                            ArrayPat {
                                                                elems: [
                                                                    Some(
                                                                        ArrayPatElem {
                                                                            pattern: Pattern {
                                                                                span: 14..17,
                                                                                kind: Ident(
                                                                                    BindingIdent {
                                                                                        name: "bar",
                                                                                        mutable: false,
                                                                                        span: 14..17,
                                                                                    },
                                                                                ),
                                                                                inferred_type: None,
                                                                            },
                                                                            init: None,
                                                                        },
                                                                    ),
                                                                    Some(
                                                                        ArrayPatElem {
                                                                            pattern: Pattern {
                                                                                span: 19..26,
                                                                                kind: Rest(
                                                                                    RestPat {
                                                                                        arg: Pattern {
                                                                                            span: 22..26,
                                                                                            kind: Ident(
                                                                                                BindingIdent {
                                                                                                    name: "rest",
                                                                                                    mutable: false,
                                                                                                    span: 22..26,
                                                                                                },
                                                                                            ),
                                                                                            inferred_type: None,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                inferred_type: None,
                                                                            },
                                                                            init: None,
                                                                        },
                                                                    ),
                                                                ],
                                                                optional: false,
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        init: None,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 31..34,
                        kind: Ident(
                            Ident {
                                span: 31..34,
                                name: "baz",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
