crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-9.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = ({a, b}: {a: string, b: number}) => b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..48,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..47,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            span: 11..17,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                ident: BindingIdent {
                                                                    name: "a",
                                                                    mutable: false,
                                                                    span: 12..13,
                                                                },
                                                                init: None,
                                                                span: 12..13,
                                                            },
                                                        ),
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                ident: BindingIdent {
                                                                    name: "b",
                                                                    mutable: false,
                                                                    span: 15..16,
                                                                },
                                                                init: None,
                                                                span: 15..16,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Object(
                                                    ObjectType {
                                                        span: 19..41,
                                                        elems: [
                                                            Prop(
                                                                TProp {
                                                                    span: 20..29,
                                                                    name: "a",
                                                                    optional: false,
                                                                    mutable: false,
                                                                    type_ann: TypeAnn {
                                                                        kind: Keyword(
                                                                            KeywordType {
                                                                                span: 23..29,
                                                                                keyword: String,
                                                                            },
                                                                        ),
                                                                        span: 23..29,
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                            Prop(
                                                                TProp {
                                                                    span: 31..40,
                                                                    name: "b",
                                                                    optional: false,
                                                                    mutable: false,
                                                                    type_ann: TypeAnn {
                                                                        kind: Keyword(
                                                                            KeywordType {
                                                                                span: 34..40,
                                                                                keyword: Number,
                                                                            },
                                                                        ),
                                                                        span: 34..40,
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                span: 19..41,
                                                inferred_type: None,
                                            },
                                        ),
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 46..47,
                                    kind: Ident(
                                        Ident {
                                            span: 46..47,
                                            name: "b",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
