crates/crochet_parser/src/snapshots/crochet_parser__tests__function_application.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"foo()\")"
---
Program {
    body: [
        Expr {
            span: 0..5,
            expr: App(
                App {
                    span: 0..5,
                    lam: Ident(
                        Ident {
                            span: 0..3,
                            name: "foo",
                        },
                    ),
                    args: [],
                },
            ),
        },
    ],
}
