crates/crochet_parser/src/snapshots/crochet_parser__tests__if_else-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"if (a) { 5 } else if (b) { 10 } else { 20 };\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..44,
                expr: Expr {
                    span: 0..43,
                    kind: IfElse(
                        IfElse {
                            cond: Expr {
                                span: 4..5,
                                kind: Ident(
                                    Ident {
                                        span: 4..5,
                                        name: "a",
                                    },
                                ),
                                inferred_type: None,
                            },
                            consequent: Expr {
                                span: 9..10,
                                kind: Lit(
                                    Num(
                                        Num {
                                            span: 9..10,
                                            value: "5",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            alternate: Some(
                                Expr {
                                    span: 18..43,
                                    kind: IfElse(
                                        IfElse {
                                            cond: Expr {
                                                span: 22..23,
                                                kind: Ident(
                                                    Ident {
                                                        span: 22..23,
                                                        name: "b",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            consequent: Expr {
                                                span: 27..29,
                                                kind: Lit(
                                                    Num(
                                                        Num {
                                                            span: 27..29,
                                                            value: "10",
                                                        },
                                                    ),
                                                ),
                                                inferred_type: None,
                                            },
                                            alternate: Some(
                                                Expr {
                                                    span: 39..41,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                span: 39..41,
                                                                value: "20",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            ),
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            ),
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
